--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,12 +26,12 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">GammaFinances</a>
+        <p class="navbar-brand"><%= link_to "GammaFinances" , root_path  %></p>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
           <ul class="nav navbar-nav">
-            <li><%= link_to "Link1", "#"  %></li>
-            <li><%= link_to "Link2", "#"  %></li>
-            <li><%= link_to "Link3", "#"  %></li>
+            <li><%= link_to "Мои счета", expenses_path  %></li>
+            <li><%= link_to "Новый счет", new_expense_path  %></li>
+            <li> <%= link_to "Sign out", destroy_user_session_path, :method => :delete %></li>
           </ul>
         </div>
       </div>
